# minihtml

./: .gitignore  CHANGELOG.md  Changelog.md  LICENSE  MANIFEST.in  Makefile  README.md  codegen.txt  justfile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
docs/source/: api.rst  basics.rst  components.rst  conf.py  context.rst  index.rst  tags.rst  templates.rst
examples/: hello_world.html  hello_world.py
src/minihtml/: __init__.py  _component.py  _context.py  _core.py  _template.py  _template_context.py  tags.py
tags/: html5.yml
tests/: test_components.py  test_concurrency.py  test_context.py  test_elements.py  test_example.py  test_fragment.py  test_indentation.py  test_minihtml.py  test_nodes.py  test_rendering.py  test_template.py
