[project]
name = "minihtml"
version = "0.2.1"
description = "Simple HTML Generation"
readme = "README.md"
authors = [
    { name = "Stanis Trendelenburg", email = "stanis.trendelenburg@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
homepage = "https://github.com/trendels/minihtml"
source = "https://github.com/trendels/minihtml"
changelog = "https://github.com/trendels/minihtml/blob/main/Changelog.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cogapp>=3.4.1",
    "coverage>=7.6.11",
    "pyright>=1.1.393",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pyyaml>=6.0.2",
    "ruff>=0.9.5",
    "taskgroup>=0.2.2 ; python_full_version < '3.11'",
    "typing-extensions>=4.12.2 ; python_full_version < '3.11'",
]

[tool.ruff]
include = [
    "pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
extend-select = [
    "I", # isort
]
ignore = [
    "E731", # lambda assignment
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
strict = ["src", "tests"]
reportUnnecessaryTypeIgnoreComment = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_also = [
    "@overload$",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
testpaths = "tests"
verbosity_assertions = 2
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
